SERVER-21750 clean up getMore logging and profiling

--Omit ntoreturn and ntoskip from the getMore command log line.
--Add nreturned to the getMore command log line.
--Upconvert OP_GET_MORE profiler entries to match getMore cmd.

(cherry picked from commit bb7e1e539da115da4ee1146c79e47c23109dce95)